[package]
name = "Open Sea"
version = "0.1.0"
authors = ["Adam Badawy <adambada@buffalo.edu>",
           "Ticki <ticki@users.noreply.github.com>"]

[[bin]]
name = "open-sea"

[dependencies]
num = "0.1.25"
piston = "0.1.4"
piston2d-graphics = "0.1.4"
pistoncore-glutin_window = "0.1.0"
piston2d-opengl_graphics = "0.1.0"
noise = "0.1.5"
