[package]
name = "open_sea"
version = "0.1.0"
authors = ["Adam Badawy <adambada@buffalo.edu>",
           "Ticki <ticki@users.noreply.github.com>"]

[[bin]]
name = "open-sea"

[dependencies]
pistoncore-glutin_window = "0.1.0"
piston2d-opengl_graphics = "0.1.0"
rustc-serialize = "0.3.15"
time = "0.1"
noise = "0.1.5"
piston = "0.1.4"
piston2d-graphics = "0.1.4"
num = "0.1.25"

